Bug 1165309 - Make view source and print preview work in e10s-multi. r=mconley